# ppip

./: .gitignore  AGENTS.md  CLAUDE.md  PLAN-REVIEW-LOG.md  PLAN.md  README.md  VLA-security-project-decision.md  pyproject.toml
data/: README.md
data/processed/: README.md
docs/figures/: README.md
docs/plans/: 2026-07-01-autoppia-vla.md  2026-07-02-openvla-rollout-backend.md  2026-07-03-pilot-002-exploratory.md  2026-07-15-monitor-video-hijack.md  2026-07-16-exp2-deepen-through-render-hijack.md  2026-07-17-exp3-monitor-dos-redirection.md  2026-07-20-corner64-effort-push.md  2026-07-22-codex-review-log.md  2026-07-22-controllability-program.md  2026-07-22-outcome-teacher-ablation.md  2026-07-22-stealth-corner-hijack.md  2026-07-22-universal-eot-patch.md
docs/research/: confined-monitor-hijack-report.md  experiment-protocol.md  in-out.md  literature-map.md  research-log.md  risk-register.md  targeted-success-design.md  threat-model.md  tomato-sauce-to-ketchup-feasibility.md  tomato-sauce-to-milk-results.md
experiments/: adjudicable_pairs.py  encoder_probe.py  goal_analyze.py  goal_gen.py  pilot_002_pools.py  pilot_pools.py  run_candidate.py  run_pilot.py  run_pilot_002.py  run_sweep.py
experiments/candidates/: README.md  baseline_human_ppia.json  random_seed_001.json  smoke_libero_object.json
experiments/configs/: README.md  attack_candidate.schema.json  baselines.yaml  evaluation_budgets.yaml  search_conditions.yaml
experiments/patch_attack/: adaptive_attack.py  collect_states.py  collect_student_states.py  corner_attack.py  corner_crosstask_attack.py  corner_crosstask_gate.py  corner_crosstask_probe.py  corner_decisive_probe.py  corner_overlay.py  corner_probe.py  corner_reemit.py  crosstask_scene_probe.py  dagger_collect.py  delta_optimize.py  eval_delta.py  eval_patch.py  hijack_backend.py  hijack_generalize.py  hijack_hitrate.py  make_corner_demos.sh  make_monitor_demo.py  make_video.py  monitor_attack.py  monitor_hijack_backend.py  monitor_patch_attack.py  monitor_patch_sweep.py  monitor_placement_probe.py  monitor_render_attack.py  monitor_replay.py  monitor_upload_probe.py  object_distance_probe.py  patch_config.py  patch_optimize.py  progress_metrics.py  record_baseline.py  run_gate_b.py  s0_reachability.py  texture_surrogate.py  verify_forward.py  vla_diff.py
experiments/results/: README.md  aggregate_results.py
programs/autoppia-vla/: program.md
runs/: README.md
runs/autoresearch-goal/: ANALYSIS.md  BEST_CASE.md  PROGRESS.md  README.md  candidate_g_r1_00_base_milk.json  candidate_g_r1_01_base_creamcheese.json  candidate_g_r1_02_base_butter.json  candidate_g_r1_03_relabel_milk_to_creamcheese.json  candidate_g_r1_04_relabel_creamcheese_to_butter.json  candidate_g_r1_05_relabel_creamcheese_to_milk.json  candidate_g_r1_06_relabel_milk_to_butter.json  candidate_g_r1_07_relabel_butter_to_chocpudding.json  candidate_g_r1_08_relabel_bbq_to_ketchup.json  candidate_g_r1_09_relabel_tomatosauce_to_butter_DISSIM.json  candidate_g_r2b_base_alphabet_soup.json  candidate_g_r2b_base_bbq_sauce.json  candidate_g_r2b_base_butter.json  candidate_g_r2b_base_chocolate_pudding.json  candidate_g_r2b_base_cream_cheese.json  candidate_g_r2b_base_ketchup.json  candidate_g_r2b_base_milk.json  candidate_g_r2b_base_orange_juice.json  candidate_g_r2b_base_salad_dressing.json  candidate_g_r2b_base_tomato_sauce.json  candidate_g_r3_00_relabel_hi_cream_cheese.json  candidate_g_r3_01_occlude_cream_cheese.json  candidate_g_r3_02_promote_cream_cheese.json  candidate_g_r3_03_override_cream_cheese.json  candidate_g_r3_10_relabel_hi_butter.json  candidate_g_r3_11_occlude_butter.json  candidate_g_r3_12_promote_butter.json  candidate_g_r3_13_override_butter.json  candidate_g_r3_20_relabel_hi_alphabet_soup.json  candidate_g_r3_21_occlude_alphabet_soup.json  candidate_g_r3_22_promote_alphabet_soup.json  candidate_g_r3_23_override_alphabet_soup.json  candidate_g_r4_0_dos_alphabet_soup.json  candidate_g_r4_1_dos_ketchup.json  candidate_g_r4_2_dos_orange_juice.json  candidate_g_r4_3_dos_salad_dressing.json  (+11 more)
runs/autoresearch-hijack/: HIJACK_SUCCESS.md  PLAN.md  RELIABILITY.md  REPRODUCE.md  RESEARCH.md  RESULT.md
runs/autoresearch-jul3/: README.md  candidate_jul3_00_baseline.json  candidate_jul3_01_relabel_central.json  candidate_jul3_02_relabel_proximal.json  candidate_jul3_03_deictic_salient.json  candidate_jul3_04_occluding_relabel.json  candidate_jul3_05_giant_relation.json  candidate_jul3_06_suppress_user_object.json  candidate_jul3_07_suppress_and_promote.json  candidate_jul3_08_equivalence_relabel.json  candidate_jul3_09_diff_target_butter.json  ledger.jsonl  results.tsv
runs/monitor-corner/: RESULT.md  corner_summary_seed0.json  decisive_force_gate.json  decisive_force_gate48.json  decisive_trace.json  probe_results.json  reemit_BL_48.json  reemit_BL_64.json  reemit_BL_80.json  reemit_summary_seed0.json  result_corner_BL_48_seed0_esc_trial0.json  result_corner_BL_48_seed0_trial0.json  result_corner_BL_64_seed0_ctl_blank_trial0.json  result_corner_BL_64_seed0_ctl_none_trial0.json  result_corner_BL_64_seed0_ctl_random_trial0.json  result_corner_BL_64_seed0_esc_t1_trial1.json  result_corner_BL_64_seed0_esc_trial0.json  result_corner_BL_64_seed0_trial0.json  result_corner_BL_80_seed0_trial0.json  result_corner_BL_95_seed0_trial0.json  result_corner_TL_95_seed0_trial0.json  result_corner_TR_95_seed0_trial0.json  trace_corner_BL_48_seed0_esc_trial0.json
runs/monitor-crosstask/: RESULT.md
runs/monitor-hijack/: README.md
runs/pilot-001/: README.md  aggregate.json  pilot_summary.md
runs/pilot-002/: aggregate.json  pilot_002_summary.md
runs/smoke-001/: README.md
runs/tomato-sauce-ketchup/: README.md
runs/tomato-sauce-milk/: README.md  candidate_ts_milk_00_offcam_control.json  candidate_ts_milk_01_central_override.json  ledger.jsonl  (+9 more)
runs/tomato-sauce-milk-confirm/: README.md  candidate_ts_milk_03_target_promote.json  ledger.jsonl  results.tsv
src/: README.md
tests/: support.py  test_aggregate_results.py  test_pilot_002_pools.py  test_pipeline_integration.py  test_results_tsv.py
(+57 files in other folders)
