[project]
name = "autoppia-vla"
version = "0.0.1"
description = "Simulation-only harness measuring autonomous research loops for physical prompt injection on OpenVLA/LIBERO."
requires-python = ">=3.10"
# Core harness dependencies. These are enough to run every GPU-free component
# (candidate validation, scoring, the search loop, aggregation). The OpenVLA /
# LIBERO / torch stack is intentionally NOT here -- it lives in the optional
# `gpu` group so the harness can be developed and tested on a CPU-only machine.
dependencies = [
    "jsonschema>=4.18",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML",
    "types-jsonschema",
]
# GPU evaluation stack. On this host we do NOT `pip install` this group -- we reuse
# the proven, already-working uv venv at `~/vla-injection/.venv` (see third_party/README.md).
# These pins document that environment for reproducibility. torch is a +cu121 build
# (needs the PyTorch CUDA index); openvla (`prismatic`) is editable from `~/openvla`;
# `libero` is not installed -- it is imported via `PYTHONPATH=~/LIBERO`.
gpu = [
    # "torch==2.2.0",            # +cu121 build
    # "transformers==4.40.1",
    # "tokenizers==0.19.1",
    # "timm==0.9.10",
    # "accelerate==0.30.1",
    # "draccus==0.8.0",
    # "robosuite==1.4.1",
    # "mujoco==3.9.0",
    # "numpy<2",                 # torch 2.2.0 / OpenVLA stack pin the NumPy 1.x ABI
    # openvla  -> editable install from ~/openvla  (import prismatic)
    # libero   -> PYTHONPATH=~/LIBERO              (from libero.libero import benchmark)
]

[tool.pytest.ini_options]
pythonpath = ["src", "experiments/results"]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
packages = ["evaluator", "autoresearch_loop", "rendering"]
strict = true
warn_unused_ignores = true

# Optional GPU-only dependencies, absent on the CPU dev/test machine. The backend
# imports them lazily behind a runtime guard, so mypy should not require stubs.
[[tool.mypy.overrides]]
module = ["torch", "transformers"]
ignore_missing_imports = true
