[project]
name = "autoppia-vla"
version = "0.0.1"
description = "Simulation-only harness measuring autonomous research loops for physical prompt injection on OpenVLA/LIBERO."
requires-python = ">=3.10"
# Core harness dependencies. These are enough to run validation, scoring, the
# search loop, aggregation, and other GPU-independent unit tests. The OpenVLA /
# LIBERO / torch stack is intentionally NOT here -- it is documented in the
# optional `gpu` group and used from the configured GPU rollout environment.
dependencies = [
    "jsonschema>=4.18",
    "pyyaml>=6.0",
    # The visual-prompt texture renderer (src/rendering/text_prompt.py) is CPU-pure
    # and part of the core harness, so its deps live here (not the gpu group).
    # numpy is pinned <2 to match the OpenVLA/torch ABI in the GPU rollout env.
    "numpy>=1.26,<2",
    "Pillow>=10.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML",
    "types-jsonschema",
]
# GPU evaluation stack. This machine has GPUs; for rollouts we reuse the proven,
# already-working uv venv at `~/vla-injection/.venv` (see third_party/README.md)
# rather than installing the heavyweight stack into the lightweight dev venv.
# These pins document that environment for reproducibility. torch is a +cu121 build
# (needs the PyTorch CUDA index); openvla (`prismatic`) is editable from `~/openvla`;
# `libero` is not installed -- it is imported via `PYTHONPATH=~/LIBERO`.
gpu = [
    # "torch==2.2.0",            # +cu121 build
    # "transformers==4.40.1",
    # "tokenizers==0.19.1",
    # "timm==0.9.10",
    # "accelerate==0.30.1",
    # "draccus==0.8.0",
    # "robosuite==1.4.1",
    # "mujoco==3.9.0",
    # "numpy<2",                 # torch 2.2.0 / OpenVLA stack pin the NumPy 1.x ABI
    # openvla  -> editable install from ~/openvla  (import prismatic)
    # libero   -> PYTHONPATH=~/LIBERO              (from libero.libero import benchmark)
]

[tool.pytest.ini_options]
pythonpath = ["src", "experiments/results", "experiments/patch_attack"]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
packages = ["evaluator", "autoresearch_loop", "rendering"]
strict = true
warn_unused_ignores = true

# Optional GPU-stack dependencies are not installed in the lightweight dev/test venv.
# The backend imports them lazily behind a runtime guard, so mypy should not require stubs.
# LIBERO is host-provided via PYTHONPATH (not pip-installed) and ships no stubs.
[[tool.mypy.overrides]]
module = ["torch", "transformers", "libero.*", "experiments.robot.*", "mujoco", "mujoco.*"]
ignore_missing_imports = true
